--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <a class="example-image-link" href="assets/quinceaños/quincefilter2.jpg" data-lightbox="quinceaños" title="foto(1)">
                             <img src="assets/quinceaños/quincefilter2.jpg" class="figure-img img-fluid rounded" style="width: 100%;" alt="">
                         </a>
-                        <a class="example-image-link" href="assets/quincefilter1.jpg" data-lightbox="quinceaños" title="foto(2)">
+                        <a class="example-image-link" href="assets/quinceaños/quincefilter1.jpg" data-lightbox="quinceaños" title="foto(2)">
                             <img src="assets/quinceaños/quincefilter1.jpg" class="figure-img img-fluid rounded" style="width: 100%;" alt="">
                         </a>
                         <!-- <figcaption class="figure-caption text-right">Celebraciones.</figcaption> -->
